--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,50 @@
-colorama==0.3.9
-nose==1.3.7
-rednose==1.2.2
-termstyle==0.1.11
+apparmor==2.11.0
+appdirs==1.4.1
+asn1crypto==0.22.0
+awscli==1.11.60
+boto3==1.4.4
+botocore==1.5.23
+bottle==0.12.13
+cffi==1.9.1
+chardet==2.3.0
+cheroot==5.4.0
+CherryPy==10.2.1
+colorama==0.3.7
+cryptography==1.8.1
+cupshelpers==1.0
+docutils==0.13.1
+flup==1.0.3.dev20161029
+idna==2.5
+jmespath==0.9.1
+keyring==10.3.2
+LibAppArmor==2.11.0
+olefile==0.44
+packaging==16.8
+pdfrw==0.3
+Pillow==4.1.0
+portend==1.8
+py==1.4.32
+pyasn1==0.2.3
+pycparser==2.17
+pycups==1.9.72
+pycurl==7.43.0
+Pygments==2.2.0
+pygobject==3.24.1
+pyOpenSSL==16.2.0
+pyparsing==2.2.0
+pysmbc==1.0.15.6
+PySocks==1.6.6
+python-dateutil==2.6.0
+pytz==2017.2
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.13.0
+rsa==3.4.2
+rst2pdf==0.93.dev0
+s3transfer==0.1.10
+SecretStorage==2.3.1
+simplejson==3.10.0
+six==1.10.0
+tempora==1.6.1
+urllib3==1.20
+virtualenv==15.1.0
