fix logging levels

--- a/tests/test.conf
+++ b/tests/test.conf
@@ -1,6 +1,6 @@
-log-level = WARNING
+log-level = INFO
 log-file = tests/tmp/r53dydns.log
 file = tests/tmp/r53dydns.fifo
-domain = example.com
+domain = .example.com
 zone = ZZZZZZZZZZZZZZ
 wait-time = 1
